--- a/UserMicroservices/appsettings.json
+++ b/UserMicroservices/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-VMO8MRO\\SQLSERVER2022DEV;Database=User;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
