Added Response repo

--- a/UserMicroservices/UserMicroservice.csproj
+++ b/UserMicroservices/UserMicroservice.csproj
@@ -17,4 +17,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AppDbContext\AppDbContext.csproj" />
+    <ProjectReference Include="..\ServiceRespnse\ServiceRespnse.csproj" />
+  </ItemGroup>
+
 </Project>
