--- a/UserMicroservices/appsettings.json
+++ b/UserMicroservices/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-VMO8MRO\\SQLSERVER2022DEV;Database=User;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=CYNOSURE\\SQLEXPRESS;Database=EcomCoreDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
